@@ -20,6 +20,7 @@ Copyright (C) 2025 - Mr. Lima
 - Command `x11 item` remove all personalized itens from default screen
 - New Package **WebProxy**
 - Background Thread implemented at `MIDletControl`
+- Command `mmspt` when read arguments, set it as **Thread priority**, if argument is `priority` show current priority of current Thread
 
 [ _Notes_ ]
 
